[package]
name = "array-programming"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
plotters = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "2.0.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "wave_gen"
path = "bin/wave_gen.rs"

[[bin]]
name = "plotter"
path = "bin/plotter.rs"